[package]
name = "log-replication-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
